# ANLOVI

./: LICENSE  README.md  config.py  main.py  pyproject.toml
static/css/: style.css
static/js/: main.js
templates/: base.html  error.html  index.html
