[project]
name = "ANLOVI"
version = "1.0.0"
description = "A tool for reading news in a new soft and smooth way, to get updated at a glance. Highly suitable for low vision individuals"
requires-python = ">=3.11"
dependencies = [
    "email-validator>=2.2.0",
    "feedparser>=6.0.11",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "trafilatura>=2.0.0",
]
